--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
   },
   "dependencies": {
     "bitcore-mnemonic": "^8.6.0",
+    "sodium-native": "^3.2.0",
     "uuidv4": "^4.0.0",
     "z-schema": "^4.1.0"
   },
